--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   "homepage": "https://github.com/DarkinDev/Email-OTP#readme",
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4"
   },
   "devDependencies": {
+    "dotenv": "^17.2.0",
     "nodemon": "^3.1.10"
   }
 }
